# POOnatural

./: Alimento.cpp  Alimento.h  Animal.cpp  Animal.h  CMakeLists.txt  Comandos.cpp  Comandos.h  Constantes.cpp  Constantes.h  Includes.h  Interface.cpp  Interface.h  Local.cpp  Local.h  Macaco.cpp  Macaco.h  README.md  Reserva.cpp  Reserva.h  Terminal.cpp  Terminal.h  comandos.txt  constantes.txt  curses.h  main.cpp  teste.txt
Alimentos/: Alimento.cpp  Alimento.h  Banana.cpp  Banana.h  Bife.cpp  Bife.h  Cenoura.cpp  Cenoura.h  Corpo.cpp  Corpo.h  Relva.cpp  Relva.h
Animais/: Animal.cpp  Animal.h  Canguru.cpp  Canguru.h  Coelho.cpp  Coelho.h  Humano.cpp  Humano.h  Lobo.cpp  Lobo.h  Macaco.cpp  Macaco.h  Ovelha.cpp  Ovelha.h
Comandos/: Alim.cpp  Alim.h  Anim.cpp  Anim.h  Comando.cpp  Comando.h  CriaAnimal.cpp  CriaAnimal.h  Empty.cpp  Empty.h  Exit.cpp  Exit.h  Feed.cpp  Feed.h  Feedid.cpp  Feedid.h  Food.cpp  Food.h  Info.cpp  Info.h  Kill.cpp  Kill.h  Killid.cpp  Killid.h  Load.cpp  Load.h  Next.cpp  Next.h  Nofood.cpp  Nofood.h  Restore.cpp  Restore.h  See.cpp  See.h  Slide.cpp  Slide.h  Store.cpp  Store.h  Visalim.cpp  Visalim.h  (+2 more)
Interface/: Interface.cpp  Interface.h
Interfaces/: Interface.cpp  Interface.h  Save.cpp  Save.h
Reserva/: Local.cpp  Local.h  Reserva.cpp  Reserva.h
